# OpenFace

./: CMakeLists.txt  gscr.sh  install.sh
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp
lib/local/LandmarkDetector/include/: stdafx.h
